.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glaybud__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glaybud</customHelpPage>
    <description>glaybud__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glaybud_glacct__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;
TEXT( rstkf__glaybud_glyear__r.rstkf__glyear_year__c ) &amp; &apos;_&apos; &amp;
rstkf__glaybud_gldiv__r.rstkf__gldiv_sydiv__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp;
rstkf__glaybud_glproj__r.rstkf__glproj_proj__c &amp; &apos;_&apos; &amp; 
TEXT( rstkf__glaybud_dimnum__c ) &amp; &apos;_&apos; &amp;
rstkf__glaybud_dimval__c &amp; &apos;_&apos; &amp;
rstkf__glaybud_revlevel__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT( rstkf__glaybud_glyear__r.rstkf__glyear_year__c ) &amp; &apos;-&apos; &amp;  rstkf__glaybud_glacct__r.rstkf__glacct_acct__c  &amp; &apos;-&apos; &amp;  rstkf__glaybud_revlevel__c &amp; &apos; (&apos; &amp; TEXT(rstkf__glaybud_scope__c) &amp; &apos;)&apos;</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_begbalcr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Set to desired value</inlineHelpText>
        <label>Beginning Balance - Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_begbaldr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Set to desired value</inlineHelpText>
        <label>Beginning Balance - Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_begbalnet__c</fullName>
        <formula>rstkf__glaybud_begbaldr__c - rstkf__glaybud_begbalcr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System calculated difference between &apos;Beginning Balance - Debit&apos; and &apos;Beginning Balance - Credit&apos;</inlineHelpText>
        <label>Beginning Balance - Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_dimnum__c</fullName>
        <inlineHelpText>Will be required based on &apos;Budget Scope&apos; selected. Set to the appropriate Dimension Number as defined on the Manufacturing Company record for this Financial Company when field is enabled. Once selected, &apos;Dimension Value Field&apos; is required.</inlineHelpText>
        <label>Dimension Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_dimnum_pl__c</fullName>
        <label>Dimension Number Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_dimsetval1__c</fullName>
        <description>Dimension Set Value 1</description>
        <inlineHelpText>Dimension Set Value 1</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_dimsetval2__c</fullName>
        <description>Dimension Set Value</description>
        <inlineHelpText>Dimension Set Value 2</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_dimsetval3__c</fullName>
        <description>Dimension Set Value 3</description>
        <inlineHelpText>Dimension Set Value 3</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_dimval__c</fullName>
        <inlineHelpText>When Dimension is applicable and the &apos;Dimension Number&apos; field is entered, select from valid Dimension values as defined for the designated Dimension Number on the Manufacturing Company record.</inlineHelpText>
        <label>Dimension Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The GL Account for which this budget record applies</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipName>glaybuds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Financial Company that this GL Account Year Budget pertains to</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipName>glaybuds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_glcmpdimset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension Set</description>
        <inlineHelpText>Dimension Set</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__glcmpdimset__c</referenceTo>
        <relationshipLabel>Financial Budgets (Dimension Set)</relationshipLabel>
        <relationshipName>glaybuds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_glcmpdimsetvalstr__c</fullName>
        <description>Dimension Set Values</description>
        <inlineHelpText>Dimension Set Values</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_gldiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Will be required based on &apos;Budget Scope&apos; selected. Set to the appropriate Financial Division when field is enabled.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipName>glaybuds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_glproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Will be required based on &apos;Budget Scope&apos; selected. Set to the appropriate Financial Project when field is enabled.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipName>glaybuds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_glyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Fiscal Year of this budget record</inlineHelpText>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipName>glaybuds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_p01cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period 1 - Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_p01dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period 1 - Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_p01net__c</fullName>
        <formula>rstkf__glaybud_p01dr__c -  rstkf__glaybud_p01cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period 1 - Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_p02cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period 2 - Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_p02dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period 2 - Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_p02net__c</fullName>
        <formula>rstkf__glaybud_p02dr__c - rstkf__glaybud_p02cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period 2 - Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_p03cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period 3 - Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_p03dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period 3 - Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_p03net__c</fullName>
        <formula>rstkf__glaybud_p03dr__c - rstkf__glaybud_p03cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period 3 - Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_revdate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>To be set when record is added.  If left blank in Add (New) mode, it will be set to the day the record was added.</inlineHelpText>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_revlevel__c</fullName>
        <inlineHelpText>User-defined value, up to 10 characters in length</inlineHelpText>
        <label>Revision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_revstatdate__c</fullName>
        <inlineHelpText>When &apos;Revision Status&apos; is changed, value is set to the day the change was made</inlineHelpText>
        <label>Revision Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_revstatus__c</fullName>
        <inlineHelpText>Set to appropriate value based on what &quot;stage&quot; one is in in the budget creation process. Options are

Under Construction
Official Base Budget
Official Revision
Superseded
Logically Deleted</inlineHelpText>
        <label>Revision Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under Construction</fullName>
                    <default>true</default>
                    <label>Under Construction</label>
                </value>
                <value>
                    <fullName>Official Base Budget</fullName>
                </value>
                <value>
                    <fullName>Official Revision</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Logically Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glaybud_scope__c</fullName>
        <inlineHelpText>Designates scope of what this budget represents, driving fields below. Options are

Acct-Wide Data
Division-Specific Data
Project-Specific Data
Account &amp; Dimension-Specific Data
Division &amp; Dimension-Specific Data
Project &amp; Dimension-Specific Data</inlineHelpText>
        <label>Budget Scope</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account-Wide Data</fullName>
                    <default>true</default>
                    <label>Account-Wide Data</label>
                </value>
                <value>
                    <fullName>Division-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Project-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Dimension -Specific Data</fullName>
                </value>
                <value>
                    <fullName>Division &amp; Dimension -Specific Data</fullName>
                </value>
                <value>
                    <fullName>Project &amp; Dimension -Specific Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__init_beg_balances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initialize Beginning Balances on Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__init_begbal_method__c</fullName>
        <inlineHelpText>Method for Initializing Beginning Balances</inlineHelpText>
        <label>Method for Initializing Beginning Bals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Year&apos;s Actuals</fullName>
                </value>
                <value>
                    <fullName>Last Year&apos;s Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__init_begbal_revlevel__c</fullName>
        <inlineHelpText>Initialize Beginning Balance Source Revision</inlineHelpText>
        <label>Initialize Beginning Bal Source Revision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__init_budget_actfactor__c</fullName>
        <inlineHelpText>Initialize Budget Inflate-Deflate Factor for Actuals</inlineHelpText>
        <label>Initialize Bud Inf-Def Factor for Actual</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__init_budget_budfactor__c</fullName>
        <inlineHelpText>Initialize Budget Inflate-Deflate Factor for Budgets</inlineHelpText>
        <label>Initialize Bud Inf-Def Factor for Budget</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__init_budget_revlevel__c</fullName>
        <label>Initialize Budget Source Revision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__init_budget_values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initialize Budget Values on Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Budget</label>
    <listViews>
        <fullName>rstkf__Financial_Budgets_WWW</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glaybud_glcmp__c</columns>
        <columns>rstkf__glaybud_glyear__c</columns>
        <columns>rstkf__glaybud_glacct__c</columns>
        <columns>rstkf__glaybud_scope__c</columns>
        <columns>rstkf__glaybud_revlevel__c</columns>
        <columns>rstkf__glaybud_revdate__c</columns>
        <columns>rstkf__glaybud_revstatus__c</columns>
        <columns>rstkf__glaybud_dimnum__c</columns>
        <columns>rstkf__glaybud_begbaldr__c</columns>
        <columns>rstkf__glaybud_begbalcr__c</columns>
        <columns>rstkf__glaybud_dimval__c</columns>
        <columns>rstkf__glaybud_glproj__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glaybud_glcmp__c</field>
            <operation>startsWith</operation>
            <value>W</value>
        </filters>
        <label>Financial Budgets - WWW</label>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_GL_Account_Year_Budgets</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glaybud_glcmp__c</columns>
        <columns>rstkf__glaybud_glyear__c</columns>
        <columns>rstkf__glaybud_glacct__c</columns>
        <columns>rstkf__glaybud_glcmpdimsetvalstr__c</columns>
        <columns>rstkf__glaybud_scope__c</columns>
        <columns>rstkf__glaybud_gldiv__c</columns>
        <columns>rstkf__glaybud_glproj__c</columns>
        <columns>rstkf__glaybud_glcmpdimset__c</columns>
        <columns>rstkf__glaybud_dimsetval1__c</columns>
        <columns>rstkf__glaybud_dimsetval2__c</columns>
        <columns>rstkf__glaybud_dimsetval5__c</columns>
        <columns>rstkf__glaybud_dimsetval8__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glaybud_glcmp__c</field>
            <operation>contains</operation>
            <value>www</value>
        </filters>
        <label>Financial Budgets JSF</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_GL_Account_Year_Budgets_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glaybud_glcmp__c</columns>
        <columns>rstkf__glaybud_glyear__c</columns>
        <columns>rstkf__glaybud_glacct__c</columns>
        <columns>rstkf__glaybud_scope__c</columns>
        <columns>rstkf__glaybud_revlevel__c</columns>
        <columns>rstkf__glaybud_revdate__c</columns>
        <columns>rstkf__glaybud_revstatus__c</columns>
        <columns>rstkf__glaybud_begbaldr__c</columns>
        <columns>rstkf__glaybud_begbalcr__c</columns>
        <columns>rstkf__glaybud_dimval__c</columns>
        <columns>rstkf__glaybud_gldiv__c</columns>
        <columns>rstkf__glaybud_glproj__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Budgets - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__begBalanceCreditCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Beginning Balance - Credit cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK(rstkf__glaybud_begbalcr__c)||rstkf__glaybud_begbalcr__c  &lt; 0</errorConditionFormula>
        <errorMessage>Beginning Balance - Credit cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__begBalanceDebitCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Beginning Balance - Debit cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK(rstkf__glaybud_begbaldr__c)||rstkf__glaybud_begbaldr__c  &lt; 0</errorConditionFormula>
        <errorMessage>Beginning Balance - Debit cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__budgetScopeIsReqAndCannotBeModified</fullName>
        <active>true</active>
        <description>Budget Scope is required and cannot be modified.</description>
        <errorConditionFormula>ISBLANK(TEXT(rstkf__glaybud_scope__c)) ||
(!ISNEW() &amp;&amp; ISCHANGED(rstkf__glaybud_scope__c))</errorConditionFormula>
        <errorMessage>Budget Scope is required and cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__comanynumberisrequiredandcannotmodified</fullName>
        <active>true</active>
        <description>Company Number is required and cannot be modifiable</description>
        <errorConditionFormula>ISBLANK(rstkf__glaybud_glcmp__c) || (!ISNEW() &amp;&amp; ISCHANGED(rstkf__glaybud_glcmp__c))</errorConditionFormula>
        <errorMessage>Company Number is required and cannot be modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__dimNumIsReqAndBetween1and8</fullName>
        <active>true</active>
        <description>Dimension Number is required and must be in between 1 and 8.</description>
        <errorConditionFormula>OR(
(ISBLANK(rstkf__glaybud_dimnum__c) &amp;&amp;
(
ISPICKVAL(rstkf__glaybud_scope__c, &apos;Account &amp; Dimension -Specific Data&apos;) || 
ISPICKVAL(rstkf__glaybud_scope__c, &apos;Division &amp; Dimension -Specific Data&apos;) ||
ISPICKVAL(rstkf__glaybud_scope__c, &apos;Project &amp; Dimension -Specific Data&apos;)
)),
 (rstkf__glaybud_dimnum__c  &lt; 1  ||  rstkf__glaybud_dimnum__c  &gt; 8)
)</errorConditionFormula>
        <errorMessage>Dimension Number is required and must be in between 1 and 8.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__dimensionNumberCannotBeModified</fullName>
        <active>true</active>
        <description>Dimension Number cannot be modified.</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(rstkf__glaybud_dimnum__c)</errorConditionFormula>
        <errorMessage>Dimension Number cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__dimensionValueCannotBeModified</fullName>
        <active>true</active>
        <description>Dimension Value cannot be modified.</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(rstkf__glaybud_dimval__c)</errorConditionFormula>
        <errorMessage>Dimension Value cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__dimensionValueIsRequired</fullName>
        <active>true</active>
        <description>Dimension Value is required.</description>
        <errorConditionFormula>ISBLANK(rstkf__glaybud_dimval__c)&amp;&amp;
(
ISPICKVAL( rstkf__glaybud_scope__c , &apos;Account &amp; Dimension -Specific Data&apos;) ||
ISPICKVAL( rstkf__glaybud_scope__c , &apos;Division &amp; Dimension -Specific Data&apos;) ||
ISPICKVAL( rstkf__glaybud_scope__c , &apos;Project &amp; Dimension -Specific Data&apos;)
)</errorConditionFormula>
        <errorMessage>Dimension Value is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__divisionCannotBeModified</fullName>
        <active>true</active>
        <description>Division cannot be modified.</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED( rstkf__glaybud_gldiv__c )</errorConditionFormula>
        <errorMessage>Division cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__divisionisrequired</fullName>
        <active>true</active>
        <description>Division is required.</description>
        <errorConditionFormula>ISBLANK(rstkf__glaybud_gldiv__c) &amp;&amp; 
(
ISPICKVAL(rstkf__glaybud_scope__c , &apos;Division-Specific Data&apos;) ||
ISPICKVAL(rstkf__glaybud_scope__c , &apos;Project-Specific Data&apos;) ||
ISPICKVAL(rstkf__glaybud_scope__c , &apos;Division &amp; Dimension -Specific Data&apos;) ||
ISPICKVAL(rstkf__glaybud_scope__c , &apos;Project &amp; Dimension -Specific Data&apos;)
)</errorConditionFormula>
        <errorMessage>Division is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__fiscalYearisReqAndNotModified</fullName>
        <active>true</active>
        <description>Fiscal year is required and cannot be modified.</description>
        <errorConditionFormula>ISBLANK(rstkf__glaybud_glyear__c) || 
(!ISNEW() &amp;&amp; ISCHANGED(rstkf__glaybud_glyear__c))</errorConditionFormula>
        <errorMessage>Fiscal year is required and cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__glaccountIsReqAndNotModified</fullName>
        <active>true</active>
        <description>GL Account is required and cannot be modified.</description>
        <errorConditionFormula>ISBLANK(rstkf__glaybud_glacct__c)
||(!ISNEW() &amp;&amp; ISCHANGED(rstkf__glaybud_glacct__c))</errorConditionFormula>
        <errorMessage>GL Account is required and cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__initBudgetActfactorBtn0And100</fullName>
        <active>true</active>
        <description>Initialize Bud Inf-Def Factor for Actual value must be greater than zero and less than 99.99</description>
        <errorConditionFormula>!ISBLANK(rstkf__init_budget_actfactor__c) 
&amp;&amp;
(
rstkf__init_budget_actfactor__c &lt; 0 
|| rstkf__init_budget_actfactor__c &gt; 99.99
)</errorConditionFormula>
        <errorMessage>Initialize Bud Inf-Def Factor for Actual value must be greater than zero and less than 99.99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__initBudgetBudfactorBtn0And100</fullName>
        <active>true</active>
        <description>Initialize Bud Inf-Def Factor for Budget value must be greater than 0 and less than 99.99</description>
        <errorConditionFormula>!ISBLANK(rstkf__init_budget_budfactor__c) 
&amp;&amp; 
(
rstkf__init_budget_budfactor__c &lt; 0 
|| rstkf__init_budget_budfactor__c &gt; 99.99
)</errorConditionFormula>
        <errorMessage>Initialize Bud Inf-Def Factor for Budget value must be greater than 0 and less than 99.99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period10CreditsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 10 - Credits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p10cr__c ) || rstkf__glaybud_p10cr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 10 - Credits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period10DebitsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 10 - Debits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p10dr__c ) || rstkf__glaybud_p10dr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 10 - Debits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period11CreditsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 11 - Credits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p11cr__c ) || rstkf__glaybud_p11cr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 11 - Credits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period11DebitsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 11 - Debits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p11dr__c )|| rstkf__glaybud_p11dr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 11 - Debits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period12CreditsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 12 - Credits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p12cr__c ) || rstkf__glaybud_p12cr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 12 - Credits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period12DebitsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 12 - Debits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p12dr__c ) || rstkf__glaybud_p12dr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 12 - Debits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period13CreditsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 13 - Credits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p13cr__c ) || rstkf__glaybud_p13cr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 13 - Credits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period13DebitsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 13 - Debits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p13dr__c ) || rstkf__glaybud_p13dr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 13 - Debits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period1CreditsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 1 - Credits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p01cr__c ) ||  rstkf__glaybud_p01cr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 1 - Credits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period1DebitsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 1 - Debits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p01dr__c ) || rstkf__glaybud_p01dr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 1 - Debits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period2CreditsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 2 - Credits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p02cr__c ) || rstkf__glaybud_p02cr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 2 - Credits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period2DebitsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 2 - Debits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p02dr__c ) || rstkf__glaybud_p02dr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 2 - Debits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period3CreditsCannotBeBlankorLessThan0</fullName>
        <active>true</active>
        <description>Period 3 - Credits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p03cr__c ) || rstkf__glaybud_p03cr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 3 - Credits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period3DebitsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 3 - Debits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p03dr__c ) || rstkf__glaybud_p03dr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 3 - Debits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period4CreditsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 4 - Credits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p04cr__c ) || rstkf__glaybud_p04cr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 4 - Credits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period4DebitsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 4 - Debits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p04dr__c ) || rstkf__glaybud_p04dr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 4 - Debits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period5CreditsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 5 - Credits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p05cr__c ) || rstkf__glaybud_p05cr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 5 - Credits cannot be blank or less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__period5DebitsCannotBeBlankOrLessThan0</fullName>
        <active>true</active>
        <description>Period 5 - Debits cannot be blank or less than 0.</description>
        <errorConditionFormula>ISBLANK( rstkf__glaybud_p05dr__c ) || rstkf__glaybud_p05dr__c &lt; 0</errorConditionFormula>
        <errorMessage>Period 5 - Debits cannot be blank or less than 0.</errorMessage>
    </validationRules>
</CustomObject>